PR/6764: Charles M. Hannum: `trap 0' does not work in ksh subshells. When subshells exit normally, use unwind(LEXIT) instead of unwind(LLEAVE) so that traps get executed.